hot fix - fixed layout issues

--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -3,6 +3,6 @@
 	z-index: 0;
 	top: 0;
 	width: 100%;
-	height: 90%;
+	height: 100%;
 	background-image: linear-gradient(to right,#02393230 , white);
   }
